@@ -79,8 +79,8 @@ class EXPORT JackAudioDriver : public JackDriver
         virtual int Detach();
         virtual int Write();
 
-        // sets up fEngineControl and fGraphManager, always succeeds
-        virtual int SetBufferSize(jack_nframes_t buffer_size);
+		virtual int SetBufferSize(jack_nframes_t buffer_size);		
+		virtual int SetSampleRate(jack_nframes_t sample_rate);
 
         virtual void NotifyXRun(jack_time_t callback_usecs); // XRun notification sent by the driver
 
